--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation project(':ionic-enterprise-auth')
 
 }
-
+apply from: "../../node_modules/@ionic-enterprise/identity-vault/src/android/ionicnativeauth.gradle"
 
 if (hasProperty('postBuildExtras')) {
   postBuildExtras()
