--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=8100",
     "build": "ng build && cap sync",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -30,40 +30,40 @@
     "@ionic-enterprise/identity-vault": "^5.9.6",
     "@ionic/angular": "^6.1.9",
     "ionicons": "^6.0.3",
-    "rxjs": "~7.5.0",
+    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.0",
-    "@angular-eslint/builder": "^14.0.0",
-    "@angular-eslint/eslint-plugin": "^14.0.0",
-    "@angular-eslint/eslint-plugin-template": "^14.0.0",
-    "@angular-eslint/template-parser": "^14.0.0",
+    "@angular-eslint/builder": "~15.2.1",
+    "@angular-eslint/eslint-plugin": "~15.2.1",
+    "@angular-eslint/eslint-plugin-template": "~15.2.1",
+    "@angular-eslint/template-parser": "~15.2.1",
     "@angular/cli": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
     "@capacitor/cli": "4.7.0",
-    "@ionic/angular-toolkit": "^6.0.0",
-    "@types/jasmine": "~4.0.0",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~4.3.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "@ionic/angular-toolkit": "~8.0.0",
+    "@types/jasmine": "~4.3.1",
+    "@types/node": "~18.14.6",
+    "@typescript-eslint/eslint-plugin": "~5.54.0",
+    "@typescript-eslint/parser": "~5.54.0",
+    "eslint": "~8.35.0",
+    "eslint-plugin-import": "~2.27.5",
+    "eslint-plugin-jsdoc": "~40.0.1",
+    "eslint-plugin-prefer-arrow": "~1.2.3",
+    "jasmine-core": "~4.5.0",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.8.4"
+    "ts-node": "~10.9.1",
+    "typescript": "~4.9.5"
   },
   "description": "An Ionic project"
 }
