chore(): update to Cap 5

--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@capacitor/android": "4.7.0",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.0",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/ios": "4.7.0",
-    "@capacitor/keyboard": "4.1.1",
-    "@capacitor/status-bar": "4.1.1",
-    "@ionic-enterprise/auth": "^4.0.0-rc.1",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
+    "@ionic-enterprise/auth": "~5.0.1",
     "@ionic-enterprise/identity-vault": "^5.9.6",
     "@ionic/angular": "^6.1.9",
     "ionicons": "^6.0.3",
@@ -44,7 +44,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.7.0",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "~8.0.0",
     "@types/jasmine": "~4.3.1",
     "@types/node": "~18.14.6",
