--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/common": "^16.0.2",
+    "@angular/core": "^16.0.2",
+    "@angular/forms": "^16.0.2",
+    "@angular/platform-browser": "^16.0.2",
+    "@angular/platform-browser-dynamic": "^16.0.2",
+    "@angular/router": "^16.0.2",
     "@capacitor/android": "^5.0.0",
     "@capacitor/app": "^5.0.0",
     "@capacitor/core": "^5.0.0",
@@ -29,41 +29,41 @@
     "@ionic-enterprise/auth": "~5.0.1",
     "@ionic-enterprise/identity-vault": "^5.9.6",
     "@ionic/angular": "^6.1.9",
-    "ionicons": "^6.0.3",
+    "ionicons": "~7.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0",
-    "@angular-eslint/builder": "~15.2.1",
-    "@angular-eslint/eslint-plugin": "~15.2.1",
-    "@angular-eslint/eslint-plugin-template": "~15.2.1",
-    "@angular-eslint/template-parser": "~15.2.1",
-    "@angular/cli": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
-    "@angular/language-service": "^15.0.0",
+    "@angular-devkit/build-angular": "^16.0.2",
+    "@angular-eslint/builder": "~16.0.2",
+    "@angular-eslint/eslint-plugin": "~16.0.2",
+    "@angular-eslint/eslint-plugin-template": "~16.0.2",
+    "@angular-eslint/template-parser": "~16.0.2",
+    "@angular/cli": "^16.0.2",
+    "@angular/compiler": "^16.0.2",
+    "@angular/compiler-cli": "^16.0.2",
+    "@angular/language-service": "^16.0.2",
     "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "~8.0.0",
     "@types/jasmine": "~4.3.1",
-    "@types/node": "~18.14.6",
-    "@typescript-eslint/eslint-plugin": "~5.54.0",
-    "@typescript-eslint/parser": "~5.54.0",
-    "eslint": "~8.35.0",
+    "@types/node": "~20.2.1",
+    "@typescript-eslint/eslint-plugin": "~5.59.6",
+    "@typescript-eslint/parser": "~5.59.6",
+    "eslint": "~8.40.0",
     "eslint-plugin-import": "~2.27.5",
-    "eslint-plugin-jsdoc": "~40.0.1",
+    "eslint-plugin-jsdoc": "~44.2.4",
     "eslint-plugin-prefer-arrow": "~1.2.3",
     "jasmine-core": "~4.5.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "ts-node": "~10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~5.0.4"
   },
   "description": "An Ionic project"
 }
