--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@capacitor/status-bar": "^5.0.0",
     "@ionic-enterprise/auth": "~5.0.1",
     "@ionic-enterprise/identity-vault": "^5.9.6",
-    "@ionic/angular": "^6.1.9",
+    "@ionic/angular": "~7.0.7",
     "ionicons": "~7.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -45,7 +45,7 @@
     "@angular/compiler-cli": "^16.0.2",
     "@angular/language-service": "^16.0.2",
     "@capacitor/cli": "^5.0.0",
-    "@ionic/angular-toolkit": "~8.0.0",
+    "@ionic/angular-toolkit": "~9.0.0",
     "@types/jasmine": "~4.3.1",
     "@types/node": "~20.2.1",
     "@typescript-eslint/eslint-plugin": "~5.59.6",
