--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve --port=8100",
     "build": "ng build && cap sync",
-    "watch": "ng build --watch --configuration development",
+    "lint": "ng lint",
+    "ng": "ng",
+    "prepare": "husky install",
+    "start": "ng serve --port=8100",
     "test": "ng test",
-    "lint": "ng lint"
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
@@ -46,14 +47,16 @@
     "@angular/language-service": "^16.0.2",
     "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "~9.0.0",
+    "@ionic/prettier-config": "~3.0.0",
     "@types/jasmine": "~4.3.1",
     "@types/node": "~20.2.1",
     "@typescript-eslint/eslint-plugin": "~5.59.6",
     "@typescript-eslint/parser": "~5.59.6",
-    "eslint": "~8.40.0",
+    "eslint": "~8.41.0",
     "eslint-plugin-import": "~2.27.5",
     "eslint-plugin-jsdoc": "~44.2.4",
     "eslint-plugin-prefer-arrow": "~1.2.3",
+    "husky": "~8.0.3",
     "jasmine-core": "~4.5.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.0",
@@ -62,6 +65,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "~2.8.8",
+    "pretty-quick": "~3.1.3",
     "ts-node": "~10.9.1",
     "typescript": "~5.0.4"
   },
