feat(auth): allow configuration from a .env file

--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
-    "build": "ng build && cap sync",
+    "build": "npm run clean && npm run config && ng build && cap sync",
+    "clean": "git checkout android/app/build.gradle android/app/src/main/AndroidManifest.xml ios/App/App/Info.plist",
+    "config": "(export $(cat .env | xargs); npm run clean; node scripts/buildConfig.js ; npm run trapeze)",
     "lint": "ng lint",
     "ng": "ng",
     "prepare": "husky install",
     "start": "ng serve --port=8100",
     "test": "ng test",
+    "trapeze": "trapeze run -y config.yaml",
     "watch": "ng build --watch --configuration development"
   },
   "private": true,
@@ -48,6 +51,7 @@
     "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "~9.0.0",
     "@ionic/prettier-config": "~3.0.0",
+    "@trapezedev/configure": "~7.0.10",
     "@types/jasmine": "~4.3.1",
     "@types/node": "~20.3.2",
     "@typescript-eslint/eslint-plugin": "~5.60.1",
