fix(auth): add NSFaceIDUsageDescription even though it will not be used

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -45,6 +45,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Face ID can be used to unlock your session.</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
